<resources>
    <string name="app_name">Examen_UC2_EncinasVíctor</string>
    <string name="welcome">Welcome to the Cheezery!</string>
    <string name="wdescription">Home of the most wonderful desserts ever seen (and tasted) by the human being.</string>
    <string name="button_start">GET STARTED!</string>
    <string name="our_menu">Our Menu</string>
    <string name="cold_drinks">Cold Drinks</string>
    <string name="hot_drinks">Hot Drinks</string>
    <string name="sweets">Sweets</string>
    <string name="salties">Salties</string>
</resources>