<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".menu">


    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:src="@drawable/title"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tvOurMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"/>

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:layout_marginTop="20dp"
        android:paddingHorizontal="50dp">

    <Button
        android:id="@+id/btnColdDrinks"
        android:text="@string/cold_drinks"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:paddingHorizontal="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="15sp"
        android:paddingVertical="10dp"
        />

    <Button
        android:id="@+id/btnHotDrinks"
        android:text="@string/hot_drinks"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:paddingHorizontal="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="15sp"
        android:paddingVertical="10dp"
        />

    <Button
        android:id="@+id/btnSweets"
        android:text="@string/sweets"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:paddingHorizontal="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="15sp"
        android:paddingVertical="10dp"/>

    <Button
        android:id="@+id/btnSalties"
        android:text="@string/salties"
        android:textColor="@color/white"
        android:background="@color/purple"
        android:paddingHorizontal="20dp"
        android:layout_marginRight="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="fill_horizontal"
        android:layout_columnWeight="1"
        android:textSize="15sp"
        android:paddingVertical="10dp"/>

    </GridLayout>

</LinearLayout>