<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple_main"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:scaleType="fitXY"
        android:src="@drawable/thecheezery"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:paddingHorizontal="25sp"
            android:text="@string/welcome"
            android:fontFamily="sans-serif-light"
            android:textColor="@color/white"
            android:gravity="center"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:fontFamily="sans-serif-light"
            android:textStyle="italic"
            android:textColor="@color/white"
            android:text="@string/wdescription"
            android:textAlignment="center"
            android:padding="15dp"
            />

        <Button
            android:id="@+id/boton_get_started"
            android:layout_width="237dp"
            android:layout_height="39dp"
            android:layout_marginTop="25dp"
            android:text="@string/button_start"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:background="@drawable/round_button"
            />

</LinearLayout>